# MultiLangProject

./: .gitignore  README.md  pom.xml
.run/: runProgram.run.xml
src/main/cpp/: CMakeLists.txt
src/main/cpp/include/: Greeting.h
src/main/cpp/src/: Greeting.cpp  main.cpp
src/main/java/: module-info.java
src/main/java/org/echo/javafxui/: JNAClasspathLoader.java  MainApplication.java  MainController.java  NativeBackend.java
src/main/resources/org/echo/javafxui/: main-view.fxml
